samples/_failures_safe/1761497721_1555e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_207e0de4.c: In function ‘main’:
./samples/SAFE/__tmp_207e0de4.c:156:5: error: expected expression at end of input
  156 |     if (
      |     ^~
./samples/SAFE/__tmp_207e0de4.c:156:5: error: expected declaration or statement at end of input
